# gspread-pandas

./: .#requirements.txt  .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  conftest.py  push.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  update_docs.sh  update_pypi.sh
.github/workflows/: python-package.yml  python-publish.yml  tagged-release.yml
docs/source/: conf.py  configuration.rst  gspread_pandas.rst  index.rst  modules.rst  using.rst
gspread-pandas-0.15.3/: PKG-INFO  requirements.txt  setup.cfg
gspread-pandas-0.15.3/gspread_pandas/: __init__.py  client.py  conf.py  util.py
gspread_pandas/: __init__.py  _version.py  client.py  conf.py  exceptions.py  spread.py  util.py
tests/: client_test.py  conf_test.py  conftest.py  spread_test.py  util_test.py
tests/cassettes/: tests.client_test.TestClient.test_create_folder.json  tests.client_test.TestClient.test_create_folder_no_parents.json  tests.client_test.TestClient.test_directories.json  tests.client_test.TestClient.test_email.json  tests.client_test.TestClient.test_email_no_perm.json  tests.client_test.TestClient.test_find_folders.json  tests.client_test.TestClient.test_find_spreadsheet_files_in_folder.json  tests.client_test.TestClient.test_find_spreadsheet_files_in_folders.json  tests.client_test.TestClient.test_list_spreadsheet_files.json  tests.client_test.TestClient.test_move_file.json  tests.client_test.TestClient.test_root.json  tests.client_test.TestSpread.test_df.json  tests.client_test.TestSpread.test_open_sheet.json  tests.client_test.TestSpread.test_spread.json  tests.spread_test.TestSpread.test_df.json  tests.spread_test.TestSpread.test_open_sheet.json  tests.spread_test.TestSpread.test_spread.json  tests.util_test.test_monkey_patch_request.json
