[bumpversion]
current_version = 3.2.1
commit = True
tag = True

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst

[aliases]
test = pytest

[flake8]
ignore = E203,E266,W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tox:tox]
envlist = py36, py37, py38, py39, py310, flake8

[testenv:flake8]
basepython = python
deps = flake8
commands = flake8 gspread_pandas

[testenv]
setenv =
	PYTHONPATH = {toxinidir}
deps = -r requirements_dev.txt
commands = python setup.py test

[bumpversion:file:gspread_pandas/_version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:CHANGELOG.rst]
search = [Unreleased]
	------------
replace = [Unreleased]
	------------
	[{new_version}] - {now:%%Y-%%m-%%d}
	-----------------------------
